--- a/public/index.html
+++ b/public/index.html
@@ -61,116 +61,14 @@
             </div>
         </div>
 
-        <div class="row mt-12 py-5">
+        <div class="row mt-12 py-5" id="repos">
             <div class="col-md-12">
                 <h2 class="mb-4">Repositórios(8)</h2>
                 <hr class="border-bottom border-5 border-dark">
             </div>
-            <div class="col-md-3 py-4" *ngFor="let card of cards">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="./repo.html">Nome do Repositório</a></h5>
-                        <p class="card-text">Descrição do Repositório.</p>
-                        <img src="assets/estrelacinza.png" style="height: 20px; width: 20px;" alt="Estrela">
-                        <span> 5 </span>
-                        <img src="assets/User-Account-Person-PNG-File.png" style="height: 20px; width: 20px;"
-                            alt="Visitas">
-                        <span> 10 </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 py-4" *ngFor="let card of cards">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="./repo.html">Nome do Repositório</a></h5>
-                        <p class="card-text">Descrição do Repositório.</p>
-                        <img src="assets/estrelacinza.png" style="height: 20px; width: 20px;" alt="Estrela">
-                        <span> 5 </span>
-                        <img src="assets/User-Account-Person-PNG-File.png" style="height: 20px; width: 20px;"
-                            alt="Visitas">
-                        <span> 10 </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 py-4" *ngFor="let card of cards">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="./repo.html">Nome do Repositório</a></h5>
-                        <p class="card-text">Descrição do Repositório.</p>
-                        <img src="assets/estrelacinza.png" style="height: 20px; width: 20px;" alt="Estrela">
-                        <span> 5 </span>
-                        <img src="assets/User-Account-Person-PNG-File.png" style="height: 20px; width: 20px;"
-                            alt="Visitas">
-                        <span> 10 </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 py-4" *ngFor="let card of cards">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="./repo.html">Nome do Repositório</a></h5>
-                        <p class="card-text">Descrição do Repositório.</p>
-                        <img src="assets/estrelacinza.png" style="height: 20px; width: 20px;" alt="Estrela">
-                        <span> 5 </span>
-                        <img src="assets/User-Account-Person-PNG-File.png" style="height: 20px; width: 20px;"
-                            alt="Visitas">
-                        <span> 10 </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 py-4" *ngFor="let card of cards">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="./repo.html">Nome do Repositório</a></h5>
-                        <p class="card-text">Descrição do Repositório.</p>
-                        <img src="assets/estrelacinza.png" style="height: 20px; width: 20px;" alt="Estrela">
-                        <span> 5 </span>
-                        <img src="assets/User-Account-Person-PNG-File.png" style="height: 20px; width: 20px;"
-                            alt="Visitas">
-                        <span> 10 </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 py-4" *ngFor="let card of cards">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="./repo.html">Nome do Repositório</a></h5>
-                        <p class="card-text">Descrição do Repositório.</p>
-                        <img src="assets/estrelacinza.png" style="height: 20px; width: 20px;" alt="Estrela">
-                        <span> 5 </span>
-                        <img src="assets/User-Account-Person-PNG-File.png" style="height: 20px; width: 20px;"
-                            alt="Visitas">
-                        <span> 10 </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 py-4" *ngFor="let card of cards">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="./repo.html">Nome do Repositório</a></h5>
-                        <p class="card-text">Descrição do Repositório.</p>
-                        <img src="assets/estrelacinza.png" style="height: 20px; width: 20px;" alt="Estrela">
-                        <span> 5 </span>
-                        <img src="assets/User-Account-Person-PNG-File.png" style="height: 20px; width: 20px;"
-                            alt="Visitas">
-                        <span> 10 </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 py-4" *ngFor="let card of cards">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="./repo.html">Nome do Repositório</a></h5>
-                        <p class="card-text">Descrição do Repositório.</p>
-                        <img src="assets/estrelacinza.png" style="height: 20px; width: 20px;" alt="Estrela">
-                        <span> 5 </span>
-                        <img src="assets/User-Account-Person-PNG-File.png" style="height: 20px; width: 20px;"
-                            alt="Visitas">
-                        <span> 10 </span>
-                    </div>
-                </div>
-            </div>
+            <!-- Os repositórios serão carregados aqui pelo JavaScript -->
         </div>
+        
 
         <main class="col-md-12 pt-3">
             <div class="col-md-12">
@@ -212,65 +110,19 @@
                 </button>
             </div>
 
-            <div class="row mt-12 py-5">
+            <div class="row mt-12 py-5" id="colegas">
                 <div class="col-md-12">
                     <h2 class="mb-4">Colegas de Trabalho</h2>
                     <hr class="border-bottom border-5 border-dark">
                 </div>
-                <div class="col-md-2 py-4" *ngFor="let card of cards">
-                    <img src="https://thispersondoesnotexist.com" class="card-img-top" alt="imagemcolegas">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Colega de Trabalho</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2 py-4" *ngFor="let card of cards">
-                    <img src="https://thispersondoesnotexist.com" class="card-img-top" alt="imagemcolegas">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Colega de Trabalho</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2 py-4" *ngFor="let card of cards">
-                    <img src="https://thispersondoesnotexist.com" class="card-img-top" alt="imagemcolegas">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Colega de Trabalho</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2 py-4" *ngFor="let card of cards">
-                    <img src="https://thispersondoesnotexist.com" class="card-img-top" alt="imagemcolegas">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Colega de Trabalho</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2 py-4" *ngFor="let card of cards">
-                    <img src="https://thispersondoesnotexist.com" class="card-img-top" alt="imagemcolegas">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Colega de Trabalho</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2 py-4" *ngFor="let card of cards">
-                    <img src="https://thispersondoesnotexist.com" class="card-img-top" alt="imagemcolegas">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Colega de Trabalho</h5>
-                        </div>
-                    </div>
-                </div>
+                <!-- Os colegas serão carregados aqui pelo JavaScript -->
             </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script>src ="../assets/scripts/home.js"</script>
 </body>
 <footer class="bg-secondary text-light py-4">
     <div class="container">
