--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                 <hr class="border-bottom border-5 border-dark">
             </div>
             <div class="col-md-4">
-                <img src="assets/foto Tiago.jpg" class="img-fluid" alt="Imagem Principal">
+                <img src="../assets/img/foto Tiago.jpg" class="img-fluid" alt="Imagem Principal">
             </div>
             <div class="col-md-8">
                 <h2><strong>Tiago Assunção de Sousa</strong></h2>
@@ -39,21 +39,21 @@
                         <p><b>Site: </b><a href="./index.html">https://pucminas.br/tiagoassuncao</a></p>
                         <div style="margin-top: 60px;">
                             <button type="button" class="btn btn-light bg-light">
-                                <img src="assets/facebook.jpeg" alt="Icon"
+                                <img src="../assets/img/facebook.jpeg" alt="Icon"
                                     style="height: 40px; width: 40px; margin-right: 5px;">
                             </button>
                             <button type="button" class="btn btn-light bg-light">
-                                <img src="assets/instagram.jpeg" alt="Icon"
+                                <img src="../assets/img/instagram.jpeg" alt="Icon"
                                     style="height: 40px; width: 40px; margin-right: 5px;">
                             </button>
                             <button type="button" class="btn btn-light bg-light">
-                                <img src="assets/X.jpeg" alt="Icon" style="height: 40px; width: 40px; margin-right: 5px;">
+                                <img src="../assets/img/X.jpeg" alt="Icon" style="height: 40px; width: 40px; margin-right: 5px;">
                             </button>
                         </div>
                     </div>
                     
                     <div class="col-md-4">
-                        <img src="assets/User-Account-Person-PNG-File.png"
+                        <img src="../assets/img/User-Account-Person-PNG-File.png"
                             style="height: 40px; width: 40px; margin-bottom: 10px; margin-top: 20px;" alt="Ícone">
                         <span> 42 </span>
                     </div>
@@ -63,7 +63,7 @@
 
         <div class="row mt-12 py-5" id="repos">
             <div class="col-md-12">
-                <h2 class="mb-4">Repositórios(8)</h2>
+                <h2 class="mb-4">Repositórios</h2>
                 <hr class="border-bottom border-5 border-dark">
             </div>
             <!-- Os repositórios serão carregados aqui pelo JavaScript -->
@@ -86,15 +86,15 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="https://source.unsplash.com/random/400×400/?code?sig=2469"
+                        <img src="../assets/img/telacodigo.jpeg"
                             style=" height: 800px; width: 800px;" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://source.unsplash.com/random/400×400/?code?sig=1234"
+                        <img src="../assets/img/telacodigo.jpeg"
                             style="height: 800px; width: 800px;" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://source.unsplash.com/random/400×400/?code?sig=5678"
+                        <img src="../assets/img/telacodigo.jpeg"
                             style="height: 800px; width: 800px;" class="d-block w-100" alt="...">
                     </div>
                 </div>
@@ -119,10 +119,10 @@
             </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script>src ="../assets/scripts/home.js"</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../assets/scripts/fetchGitHubData.js"></script>
+    <script src="../assets/scripts/updateLocalServer.js"></script>
+    <script src="../assets/scripts/displayDataIndex.js"></script>
 </body>
 <footer class="bg-secondary text-light py-4">
     <div class="container">
