--- a/public/repo.html
+++ b/public/repo.html
@@ -50,7 +50,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script>src="../assets/scripts/repo.js"</script>
+    <script src="../assets/scripts/fetchGitHubData.js"></script>
+    <script src="../assets/scripts/displayDataRepo.js"></script>
 </body>
 <footer class="bg-secondary text-light py-4">
     <div class="container">
