--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                 <p id="perfil-descricao"></p>
                 <div class="row mt-5">
                     <div class="col-md-8">
-                        <p><b>Localização:</b> <span id="perfil-localizacao">Belo Horizonte, Brasil</span></p>
+                        <p><b>Localização:</b> <span id="perfil-localizacao"></span></p>
                         <p><b>Perfil GitHub:</b> <a id="perfil-link" href="./index.html">clique aqui para acessar o perfil no github</a></p>
                         <div style="margin-top: 60px;">
                             <button type="button" class="btn btn-light bg-light">
