--- a/public/repo.html
+++ b/public/repo.html
@@ -44,11 +44,11 @@
                 <div class="row mt-5">
                     <div class="col-md-6">
                         <h2><strong>Data de Criação:</strong></h2>
-                        <p id="repo-created-at">16/04/2024</p>
+                        <p id="repo-created-at">dd/mm/aaaa</p>
                         <h2><strong>Linguagem:</strong></h2>
-                        <p id="repo-language">Javascript</p>
+                        <p id="repo-language">seiláscript</p>
                         <h2><strong>Link de Acesso:</strong></h2>
-                        <p><a id="repo-url" href="https://github.com">https://github.com</a></p>
+                        <p><a id="repo-url" href="https://github.com">https://lmaoxd.com.com</a></p>
                         <h2><strong>Tópicos:</strong></h2>
                         <div id="repo-topics" style="margin-top: 10px;">
                             <!-- Tópicos serão inseridos aqui -->
@@ -56,7 +56,7 @@
                     </div>
                     <div class="col-md-6">
                         <div id="repo-owner">
-                            <h2>Proprietário: </h2><span id="repo-owner-name" style="font-size:x-large;"><b>Tiago Assunção de Sousa</b></span>
+                            <h2>Proprietário: </h2><span id="repo-owner-name" style="font-size:x-large;"><b>nome da pessoa</b></span>
                             <h2>Avatar do Proprietário:</h2><h2><img class="avatar" src="" alt="imgproprietario"></h2>
                         </div>
                         <h2>Forks:</h2>
@@ -65,11 +65,11 @@
                         <p id="repo-license">Nenhuma</p>
                         <div class="d-flex align-items-center">
                             <img class="icon" src="https://th.bing.com/th/id/OIP.TF4y2BWyJ-28I__gNfct4wHaHa?rs=1&pid=ImgDetMain" alt="Estrela">
-                            <span id="repo-stars">5</span>
+                            <span id="repo-stars">algum numero</span>
                         </div>
                         <div class="d-flex align-items-center">
                             <img class="icon" src="https://static.vecteezy.com/system/resources/previews/000/576/515/original/eye-icon-vector-illustration.jpg" alt="Ícone">
-                            <span id="repo-watchers">1</span>
+                            <span id="repo-watchers">outro numero</span>
                         </div>
                     </div>
                 </div>
